welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:14: error: value GREEn is not a member of object java.awt.Color
setCouleurBrosse(Color.GREEn)
                       ^